--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -31,4 +31,8 @@
             </exclude>
         </whitelist>
     </filter>
+    
+    <php>
+        <ini name="date.timezone" value="Europe/Paris"/>
+    </php>
 </phpunit>
