refactor code to make it more testable

--- a/src/Acme/CalculatorBundle/Resources/config/routing.yml
+++ b/src/Acme/CalculatorBundle/Resources/config/routing.yml
@@ -1,7 +1,7 @@
 acme_calculator_homepage:
     path:     /
-    defaults: { _controller: AcmeCalculatorBundle:Default:index }
+    defaults: { _controller: acme.calculator.controller:homepage }
 
 acme_calculator_compute:
     path:     /compute
-    defaults: { _controller: AcmeCalculatorBundle:Default:compute }
+    defaults: { _controller: acme.calculator.controller:compute }
