--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -67,3 +67,7 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+jms_di_extra:
+    locations:
+        directories: ["%kernel.root_dir%/../src"]
