--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "sensio/distribution-bundle": "~3.0",
         "sensio/framework-extra-bundle": "~3.0",
         "incenteev/composer-parameter-handler": "~2.0",
-        "phpunit/phpunit": "4.1.*"
+        "phpunit/phpunit": "3.7.*",
+        "jms/di-extra-bundle": "1.4.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
