split calculator into two bundles

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,4 +1,8 @@
-acme_calculator:
-    resource: "@AcmeCalculatorBundle/Resources/config/routing.yml"
+acme_calculator_api:
+    resource: "@AcmeCalculatorAPIBundle/Resources/config/routing.yml"
+    prefix:   /api/v1/
+
+acme_calculator_ui:
+    resource: "@AcmeCalculatorUIBundle/Resources/config/routing.yml"
     prefix:   /
 
