use jms serializer to handle serialization

--- a/src/Acme/CalculatorAPIBundle/Resources/config/routing.yml
+++ b/src/Acme/CalculatorAPIBundle/Resources/config/routing.yml
@@ -1,11 +1,4 @@
-acme_calculator_api.compute.json:
-    path:     /{operandA}/{operandB}/{operator}.json
+acme_calculator_api.compute:
+    path:     /{operandA}/{operandB}/{operator}.{_format}
     defaults:
-      _controller: acme.calculator.api.controller:computeJson
-      _format: json
-
-acme_calculator_api.compute.xml:
-    path:     /{operandA}/{operandB}/{operator}.xml
-    defaults:
-      _controller: acme.calculator.api.controller:computeXml
-      _format: xml
+      _controller: acme.calculator.api.controller:compute
