--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "sensio/framework-extra-bundle": "~3.0",
         "incenteev/composer-parameter-handler": "~2.0",
         "phpunit/phpunit": "3.7.*",
-        "jms/di-extra-bundle": "1.4.0"
+        "jms/di-extra-bundle": "1.4.0",
+        "jms/serializer-bundle": "0.12.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
