--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "phpunit/phpunit": "3.7.*",
         "jms/di-extra-bundle": "1.4.0",
-        "jms/serializer-bundle": "0.12.0"
+        "jms/serializer-bundle": "0.12.0",
+        "guzzle/guzzle": "3.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
