--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "phpunit/phpunit": "3.7.*",
         "jms/di-extra-bundle": "1.4.0",
         "jms/serializer-bundle": "0.12.0",
-        "guzzle/guzzle": "3.*"
+        "acme/calculator-model": "master@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
@@ -59,5 +59,8 @@
         "branch-alias": {
             "dev-master": "2.5-dev"
         }
-    }
+    },
+    "repositories": [
+        {"name": "acme/calculator-model","type": "git","url": "https://github.com/remialvado/CalculatorModelBundle"}
+    ]
 }
