--- a/src/Acme/CalculatorUIBundle/Resources/config/routing.yml
+++ b/src/Acme/CalculatorUIBundle/Resources/config/routing.yml
@@ -1,23 +1,42 @@
 acme_calculator_ui_homepage:
     path:     /
+    defaults:
+      _controller: FrameworkBundle:Redirect:urlRedirect
+      path: /fr/
+      permanent: true
+
+acme_calculator_ui_homepage_locale:
+    path:     /{_locale}/
     defaults: { _controller: acme.calculator.ui.controller:homepage }
+    requirements:
+      _locale: fr|en
 
 acme_calculator_ui_compute:
-    path:     /compute
+    path:     /{_locale}/compute
     defaults: { _controller: acme.calculator.ui.controller:compute }
+    requirements:
+      _locale: fr|en
 
 acme_calculator_ui_footer_contact_us:
-    path:     /content/contact-us.html
+    path:     /{_locale}/content/contact-us.html
     defaults: { _controller: acme.calculator.ui.footer.controller:contact }
+    requirements:
+      _locale: fr|en
 
 acme_calculator_ui_footer_legal:
-    path:     /content/legal.html
+    path:     /{_locale}/content/legal.html
     defaults: { _controller: acme.calculator.ui.footer.controller:legal }
+    requirements:
+      _locale: fr|en
 
 acme_calculator_ui_footer_confidentiality:
-    path:     /content/confidentiality.html
+    path:     /{_locale}/content/confidentiality.html
     defaults: { _controller: acme.calculator.ui.footer.controller:confidentiality }
+    requirements:
+      _locale: fr|en
 
 acme_calculator_ui_footer_jobs:
-    path:     /content/jobs.html
+    path:     /{_locale}/content/jobs.html
     defaults: { _controller: acme.calculator.ui.footer.controller:jobs }
+    requirements:
+      _locale: fr|en
