--- a/src/Acme/CalculatorAPIBundle/Resources/config/services.yml
+++ b/src/Acme/CalculatorAPIBundle/Resources/config/services.yml
@@ -2,6 +2,5 @@ parameters:
 #    acme_calculator.example.class: Acme\CalculatorAPIBundle\Example
 
 services:
-#    acme_calculator.example:
-#        class: %acme_calculator.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+    acme.cache.apc:
+        class: Doctrine\Common\Cache\ApcCache
