--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -21,5 +21,16 @@ monolog:
             type:  stream
             path:  "%kernel.logs_dir%/%kernel.environment%.log"
             level: debug
+            channels: [!history, !formtype]
         console:
             type:  console
+        history:
+            type:     stream
+            path:     %kernel.logs_dir%/history.log
+            level:    debug
+            channels: history
+        formtype:
+            type:     stream
+            path:     %kernel.logs_dir%/formtype.log
+            level:    error
+            channels: formtype
